fixing dark mode for update course

--- a/Silicon_MVC/wwwroot/css/scss/core/_dark_mode.scss
+++ b/Silicon_MVC/wwwroot/css/scss/core/_dark_mode.scss
@@ -67,6 +67,12 @@
         }
     }
 
+    .admin-courses {
+        .form-wrapper {
+            background-color: #151822 !important;
+        }
+    }
+
 
 
     .switch {
